changed analytics domain

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       
-        ga('create', '#{GOOGLE_TA}', 'perk.es');
+        ga('create', '#{GOOGLE_TA}', 'visualbam.com');
         ga('send', 'pageview');
   %body
     = render 'layouts/includes/nav'
