Updated resume page

--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -3,14 +3,14 @@
     .row
       %h1 Summary
       %p
-        I am a front end designer/developer by day... and a front end designer/developer by night. My profession is my passion and way of life. I do not consider what I do a job as after the usual 9-5 I continue to work on personal projects in my spare time. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
+        I am a front end designer/developer by day... and a front end designer/developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
   %section#experience
     .row
       %h1 Experience
       .job
         %h5 Web Designer / UI UX
         %h6 PPG Industries
-        %p August 2012 – Present (1 year 1 month) | Greater Pittsburgh Area
+        %p August 2012 – Present (1 year 1 month) | Pittsburgh Area
         %ul
           %li Update and maintain corporate websites while maintaining brand/identity consistency
           %li Web development using Visualstudio in a .NET/Azure environment
@@ -28,7 +28,7 @@
       .job
         %h5 Graphic/Web Designer
         %h6 Kolano Design
-        %p August 2011 – August 2012 (1 year 1 month)Greater | Pittsburgh Area
+        %p August 2011 – August 2012 (1 year 1 month) | Pittsburgh Area
         %ul
           %li Designed print material: Billboards, Magazine Ads, Collateral, direct mailers and Newsletters
           %li Wordpress website development / technical support
