updated blog page

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -296,6 +296,19 @@ table tbody tr td { color: #333; padding: 9px 10px; vertical-align: top; border:
 
 
 
+/* Input ---------------------- */
+::-webkit-input-placeholder {
+   font-weight: normal;
+}
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"] {
+  border:1px solid #efefef;
+  height: 3em;
+  padding: 0.5em 0.5em 0.5em 1.5em;
+  border-radius:5em;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+
 
 
 
