--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,17 +1,42 @@
-.article-page
-  / = link_to 'New Article', new_article_path
-  / %hr
-  %section.clearfix
-    .wrapper
-      - @articles.each do |article|
-        %article
-          .content
-            %h2= link_to article.title, article
-            %p= article.body
-            .meta
-              = link_to 'Read More...'
-              .admin
-                = link_to 'Edit', edit_article_path(article)
-                = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
-          .image
-            = link_to (image_tag("img2.jpg")), article
+#articlepage
+  %section#sidebar
+    %input{:placeholder => "Search ... This doesn't work yet", :type => "text"}/
+    %hr
+    %ul
+      %li
+        %a{:href => '#'} Recent
+      %li
+        %a{:href => '#'}Featured
+  %section#content
+    - @articles.each do |article|
+      %article
+        .content
+          %h2= link_to article.title, article
+          %p= article.body
+          .meta
+            = link_to 'Read More...'
+            .admin
+              = link_to 'Edit', edit_article_path(article)
+              = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+        .image
+          = link_to (image_tag("img2.jpg")), article
+
+
+
+/ .article-page
+/   / = link_to 'New Article', new_article_path
+/   / %hr
+/   %section.clearfix
+/     .wrapper
+/       - @articles.each do |article|
+/         %article
+/           .content
+/             %h2= link_to article.title, article
+/             %p= article.body
+/             .meta
+/               = link_to 'Read More...'
+/               .admin
+/                 = link_to 'Edit', edit_article_path(article)
+/                 = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+/           .image
+/             = link_to (image_tag("img2.jpg")), article
