--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -1,3 +1,27 @@
-%footer
-  .wrapper
-
+#footer
+  %footer 
+    .row
+      %div
+        %h6
+          %strong Bruce McElroy Front End Web Designer
+        %p
+          I am a Front End Web Designer located in Pittsburgh, PA.  I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system.
+      %div
+        %h6
+          %strong Go ahead stalk me
+        .social
+          = link_to "https://www.facebook.com/bruce.a.mcelroy", :target => "_blank" do
+            .facebook.icon
+          = link_to "https://github.com/Visualbam", :target => "_blank" do
+            .github.icon
+          = link_to "www.linkedin.com/in/brucemcelroy/", :target => "_blank" do
+            .linkedin.icon
+          = link_to "http://instagram.com/visualbam", :target => "_blank" do
+            .instagram.icon
+      %div
+        %h6 
+          %strong Tell me what you think!
+        %p The suggestion form will be here soon!
+.copyright
+  .row
+    %p © 2013 Loyalty Click, LLC   All Rights Reserved  
