--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -14,7 +14,7 @@
             .facebook.icon
           = link_to "https://github.com/Visualbam", :target => "_blank" do
             .github.icon
-          = link_to "www.linkedin.com/in/brucemcelroy/", :target => "_blank" do
+          = link_to "http://www.linkedin.com/in/brucemcelroy", :target => "_blank" do
             .linkedin.icon
           = link_to "http://instagram.com/visualbam", :target => "_blank" do
             .instagram.icon
@@ -24,4 +24,4 @@
         %p The suggestion form will be here soon!
 .copyright
   .row
-    %p © 2013 Loyalty Click, LLC   All Rights Reserved  
+    %p © 2013 Bruce McElroy,   All Rights Reserved  
