--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -322,6 +322,10 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   font-weight: bold;
 }
 
+nav h1 {
+  position:absolute;
+  left:-9999em;
+}
 
 
 /*
