--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,9 @@
 %html
   %head
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0" }
-    %meta{:name => "description", :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA." }
-    %title Bruce McElroy | Front End Web Designer - Pittsburgh
-    = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
+    %meta{:name => "description", :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA and currently learning Ruby on Rails." }
+    %title Bruce McElroy | Front End Web Designer | Pittsburgh
+    = stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
     - if Rails.env.production?
       :javascript
