--- a/app/views/layouts/includes/_nav.html.haml
+++ b/app/views/layouts/includes/_nav.html.haml
@@ -10,5 +10,6 @@
       %li
         = link_to "Connect", contact_path
     %a#pull{:href => "#"} Menu
-    = link_to(image_tag("logo-simple.svg", :alt => "visualbam", :rel => "logo"), root_path)
+    = link_to(image_tag("logo-simple.svg", :alt => "Bruce McElroy | visualbam", :rel => "logo"), root_path)
+    %h1 Bruce McElroy
     .colorBar
