--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -2,7 +2,9 @@
   %section#main
     .row
       %h1 Currently under construction!
-      %h4.subheader My portfolio is now a work in progress rails app. Please do not mind all of the free space. Check back for updates! I'll be adding:
+      %h4.subheader 
+        My portfolio is now a work in progress rails app. <br/>
+        Please do not mind all of the free space. Check back for updates! I'll be adding:
       %ul
         %li Personal Blog
         %li Interface to upload portfolio projects
