--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -34,6 +34,10 @@ nav {
   font-size: 11pt;  
   font-weight: bold;  
   position: relative;
+  h1 {
+    position:absolute!important;
+    margin-left:-99999em!important;
+  }
   ul {  
     padding: 0;  
     margin: 0 auto;  
