--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -3,52 +3,51 @@
     .row
       .content
         %h1 Hello there,
-        %h3.subheader 
-          I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer, and Dog Lover. I do what I do because I love making people happy. While you're here browse 
+        %h2.subheader 
+          I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer and Dog Lover. I do what I do because I love making people happy. While you're here browse 
           = link_to "my blog", articles_path 
           or view my <a href="http://instagram.com/visualbam" target="_blank"> Instagram&nbsp;shots.</a> And if nothing else, go get inspired.
   %section#portfolio
     .row
-      .content
-        .thumbnail
-          = link_to (image_tag("portfolio/img1.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img2.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img3.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img4.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img5.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img6.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img7.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img8.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img9.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img10.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img11.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img12.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img13.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img14.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img15.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img16.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img17.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img18.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img19.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img20.jpg"))
-        .thumbnail
-          = link_to (image_tag("portfolio/img21.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img1.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img3.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img4.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img5.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img6.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img7.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img8.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img9.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img10.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img11.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img12.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img13.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img14.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img15.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img16.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img17.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img18.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img19.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img20.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img21.jpg"))
