--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@article) do |f|
+= simple_form_for(@article) do |f|
   - if @article.errors.any?
     #error_explanation
       %h2
@@ -8,13 +8,9 @@
         - @article.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :title
-    %br/
-    = f.text_field :title
-  .field
-    = f.label :body
-    %br/
-    = f.text_area :body
+    = f.input :title, label: 'Title'
   %br
+  .field
+    = f.input :body, input_html: {class: 'ckeditor'}, :toolbar => 'Standard'
   .actions
     = f.submit
