--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -12,12 +12,11 @@
       %article
         .content
           %h2= link_to article.title, article
-          %p= article.body
+          %p= raw(article.body)
           .meta
-            = link_to 'Read More...', article_path(article)
-            .admin
-              = link_to 'Edit', edit_article_path(article)
-              = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+            = link_to 'Read More...', article_path(article), :class => 'primary'
+            / = link_to 'Edit', edit_article_path(article)
+            = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
         .image
           = link_to (image_tag("img2.jpg")), article
 
