--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -15,7 +15,7 @@
         = @article.title
       %p
         %strong Body:
-        = @article.body
+        = raw(@article.body)
       / = link_to 'Edit', edit_article_path(@article)
       / = link_to 'Back', articles_path
       %hr
