--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -227,6 +227,8 @@ section:after {
 
 
 #articlepage {
+
+
   h2 {
     margin:0 0 0.25rem 0;
     a {
@@ -240,16 +242,22 @@ section:after {
     @include column(8);
     background:white;
     border-bottom: 1px solid #efefef;
-    padding:1.5rem;
     margin:0!important;
+    .articlewrap { padding:1.5rem; }
+    .imagewrap {
+      max-height: 20rem;
+      overflow: hidden;
+      img {
+        width: 100%;
+      }
+    }
+    .contentwrap {
+      padding:0 5rem 3rem;
+    }
   }
 
   aside {
     @include column(4);
-  }
-
-  article {
-    border-right:1px solid #efefef;
   }
 
   section { background:$grey; padding:4em 0 4em 0;}
