--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -11,6 +11,6 @@
     = f.input :title, label: 'Title'
   %br
   .field
-    = f.input :body, input_html: {class: 'ckeditor'}, :toolbar => 'Standard'
+    / = f.input :body, input_html: {class: 'ckeditor'}, :toolbar => 'Standard'
   .actions
     = f.submit
