--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -13,7 +13,7 @@
         .articlewrap.clearfix
           .content
             %h2= link_to article.title, article
-            %p= raw(article.body)
+            .excerpt= raw(article.body)
             .meta
               = link_to 'Read More...', article_path(article), :class => 'primary'
               / = link_to 'Edit', edit_article_path(article)
