--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -12,8 +12,9 @@
       %article
         .articlewrap.clearfix
           .content
-            %h2= link_to article.title, article
-            .excerpt= raw(article.body)
+            .excerpt
+              %h2= link_to article.title, article
+              = raw(article.body)
             .meta
               = link_to 'Read More...', article_path(article), :class => 'primary'
               / = link_to 'Edit', edit_article_path(article)
