--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -8,11 +8,8 @@
       %li
         %a{:href => '#'}Featured
   %section#content
-    %article
-      %h1 New article
+    %article.new
       = render 'form'
-      %br
-      = link_to 'Back', articles_path
 
 
 
