--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -15,6 +15,10 @@ body { margin: 0; padding: 0; background: $white; line-height: 1; color: $bodyFo
   text-shadow: none;
 }
 
+*:focus {
+    outline: 0;
+}
+
 /* Links ---------------------- */
 a img { border:none; }
 a { color: $mainColor; text-decoration: none; line-height: inherit; }
