--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -13,10 +13,8 @@
         = link_to (image_tag("img2.jpg"))
       .contentwrap
         %p#notice= notice
-        %h1
-          = @article.title
-        %p
-          = raw(@article.body)
+        %h1= @article.title
+        = raw @article.body
         / = link_to 'Edit', edit_article_path(@article)
         / = link_to 'Back', articles_path
         %hr
