--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@article) do |f|
+= simple_form_for @article, :html => {:multipart => true} do |f|
   - if @article.errors.any?
     #error_explanation
       %h2
@@ -8,8 +8,9 @@
         - @article.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.input :title, :placeholder => 'Article Title'
+    = f.text_field :title, :placeholder => 'Article Title'
   .field
     = f.text_area :body, :class => 'ckeditor'
   .actions
+    = f.input :image, :as => :file
     = f.submit :class => 'primary'
