--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,7 +1,8 @@
 #articlepage
   %section#content
-    %article.new
-      = render 'form'
+    .row
+      %article.new
+        = render 'form'
 
 
 
