--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,8 +1,9 @@
 #articlepage
   %section#content
-    %article
-      %h1 Editing article
-      = render 'form'
-      %br
-      = link_to 'Show', @article
-      = link_to 'Back', articles_path
+    .row
+      %article
+        %h1 Editing article
+        = render 'form'
+        %br
+        = link_to 'Show', @article
+        = link_to 'Back', articles_path
