Updated resume page

--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -1,14 +1,23 @@
 #resumepage
   %section#summary
-    .row
+    .row{:style => 'padding-bottom:0.25rem;'}
       %h1 Summary
       %p
-        I am a front end designer/developer by day... and a front end designer/developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
+        I am a front end developer by day... and a front end developer by night. My profession is my passion and way of life. I do not consider what I do a job. I continue working on personal projects after my normal work day. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
+      %h4{:style => 'margin-bottom:0.5rem;'}
+        Skills and Qualifications
+      %ul
+        %li Understanding of mobile development with a focus on responsive web design and mobile first approach.
+        %li Excellent understanding of designing user experiences and interfaces with a passion for usability and accessibility.
+        %li Mastery of the Photoshop, Illustrator and Indesign as well as typography.
+        %li Proficient with latest W3C standards, HTML5 and CSS3.
+        %li Jr. Ruby on Rails skillsets working with Ruby 1.93 and Rails 3. Also experience using Ruby 2 and Rails 4.
+        %li Working experience using Foundation, Bootstrap and The Semantic Grid System.
   %section#experience
     .row
       %h1 Experience
       .job
-        %h5 Web Designer / UI UX
+        %h5 Front End Web Developer
         %h6 PPG Industries
         %p August 2012 – Present (1 year 1 month) | Pittsburgh Area
         %ul
@@ -17,7 +26,7 @@
           %li Email marketing, design and development (responsive)
           %li Project management using Sharepoint (currently transitioning to atTask)
       .job
-        %h5 Front End Designer/Developer
+        %h5 Front End Web Developer
         %h6 Machovy.com
         %p August 2012 – Present (1 year 1 month) | Pittsburgh PA
         %ul
@@ -26,7 +35,7 @@
           %li Wireframe and content
           %li Website UI/Design
       .job
-        %h5 Graphic/Web Designer
+        %h5 Front End Web Developer / Graphic Designer
         %h6 Kolano Design
         %p August 2011 – August 2012 (1 year 1 month) | Pittsburgh Area
         %ul
