--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -211,7 +211,7 @@ section:after {
   h1,h2,h3,h4,h5,h6 {margin-top:0;}
   section {padding:2rem 0;}
   #summary {
-
+    ul {font-size:0.85rem;}
   }
   #experience{
     .job {
